--- a/aon-blog/package.json
+++ b/aon-blog/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.11.4",
     "dayjs": "^1.11.10",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0"
   }
 }
