--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.11.4",
     "dayjs": "^1.11.10",
+    "intro.js-react": "^1.0.0",
     "next": "14.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
