--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dayjs": "^1.11.10",
     "intro.js-react": "^1.0.0",
     "next": "14.0.3",
+    "nextjs-toploader": "^1.6.4",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
